chore(sandside): #88 refactor listState to return Entities
refs #88